--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaleb110/fetch-wrapper-ts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kaleb110/fetch-wrapper-ts/issues"
+  },
+  "homepage": "https://github.com/kaleb110/fetch-wrapper-ts#readme",
   "devDependencies": {
     "tsup": "^8.4.0",
     "typescript": "^4.0.0"
