--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=esnext --outfile=dist/foxios.min.js",
     "test": "vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "prepublishOnly": "npm run build"
   },
   "ts-node": {
@@ -35,7 +39,13 @@
   },
   "homepage": "https://github.com/kaleb110/foxios#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "esbuild": "^0.25.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.4.0",
     "typescript": "^4.0.0",
