--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI/CD for Foxios
 on:
   push:
     branches: [main]
-    tags: ['v*']  # This will trigger on version tags like v1.0.0, v1.1.0, etc.
+    tags: ['v*'] # This will trigger on version tags like v1.0.0, v1.1.0, etc.
   pull_request:
     branches: [main]
 
@@ -82,7 +82,11 @@ jobs:
         run: npm run build
 
       - name: Verify GitHub Ref
-        run: 'echo "Git ref: ${{ github.ref }}"'
+        run: |
+          echo "Git ref: ${{ github.ref }}"
+
+      - name: Login to npm
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
       - name: Run ESLint
         run: npm run lint
