chore: update package.json and include types

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "author": "Kaleb",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts"
   ],
   "repository": {
     "type": "git",
