--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-  lint-and-format:
+  formatting:
     runs-on: ubuntu-latest
     needs: test
 
@@ -43,17 +43,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run ESLint
-        run: npm run lint
-
       - name: Run Prettier check
         run: npm run format -- --check
 
-      - name: Run ESLint fix
-        run: npm run lint:fix
-
   build:
-    needs: lint-and-format
+    needs: formatting
     runs-on: ubuntu-latest
 
     steps:
@@ -87,9 +81,6 @@ jobs:
 
       - name: Login to npm
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-
-      - name: Run ESLint
-        run: npm run lint
 
       - name: Run Prettier check
         run: npm run format -- --check
