--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=esnext --outfile=dist/foxios.min.js",
+    "build": "npm run build:tsc && npm run build:esbuild",
+    "build:tsc": "tsc --emitDeclarationOnly --declaration --outDir dist",
+    "build:esbuild": "esbuild src/core/foxios.ts --bundle --minify --sourcemap --platform=node --target=esnext --outfile=dist/foxios.min.js",
     "test": "vitest",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -27,7 +29,8 @@
   "license": "MIT",
   "files": [
     "dist",
-    "index.d.ts"
+    "dist/*.d.ts",
+    "dist/*.js"
   ],
   "repository": {
     "type": "git",
