--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "module": "CommonJS",
-    "declaration": true,
-    "declarationDir": "dist",
-    "outDir": "dist",
-    "strict": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "declaration": true, // Enable the generation of .d.ts files
+    "declarationDir": "dist", // Specify the directory for type definition files
+    "outDir": "dist", // Specify the output directory for compiled JS files
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
-    "emitDeclarationOnly": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"], // Include all files in src folder
+  "exclude": ["node_modules"] // Exclude node_modules
 }
