fix: update package.json and tsconfig.json for output paths and type definitions

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "foxios",
   "version": "1.0.7",
   "description": "A TypeScript wrapper fetch wrapper with interceptors and strong typing.",
-  "type": "commonjs",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/foxios.min.js",  
+  "module": "dist/foxios.min.mjs",  
+  "types": "dist/types/index.d.ts", 
   "scripts": {
     "build": "npm run build:tsc && npm run build:esbuild",
     "build:tsc": "tsc --emitDeclarationOnly --declaration --outDir dist",
