--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "build": "npm run build:tsc && npm run build:esbuild",
-    "build:tsc": "tsc --declaration --outDir dist/types",
+    "build:tsc": "tsc --declaration --declarationDir dist/types --outDir dist src/index.ts",
     "build:esbuild": "esbuild src/core/foxios.ts --bundle --minify --sourcemap --platform=node --target=esnext --outfile=dist/foxios.min.js",
     "test": "vitest",
     "format": "prettier --write .",
@@ -27,9 +27,10 @@
   "author": "Kaleb",
   "license": "MIT",
   "files": [
-    "dist/foxios.min.js",
-    "dist/foxios.min.mjs",
-    "dist/types/index.d.ts"
+    "dist/foxios.min.js",    
+    "dist/foxios.min.mjs",     
+    "dist/types/index.d.ts",   
+    "dist/types/**/*.d.ts"     
   ],
   "repository": {
     "type": "git",
